force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/LLC_BI__Titled_Property_Details__c.object-meta.xml
<CustomObject>
    <description>This extension object captures granular details of Titled collateral.</description>
    <label>Titled Property Details</label>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Titled Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>