force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Factory_Price__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Factory_Price__c</fullName>
    <description>Users populate this optional field to indicate the price of the vehicle billed by the manufacturer.</description>
    <inlineHelpText>Enter the price of the vehicle billed by the manufacturer.</inlineHelpText>
    <label>Factory Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>