force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Financing_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Financing_Type__c</fullName>
    <description>Users populate this optional field to indicate the type of financing used to purchase the vehicle.</description>
    <inlineHelpText>Select the type of financing used to purchase the vehicle.</inlineHelpText>
    <label>Financing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>