force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Registration_Number__c</fullName>
    <description>Users populate this optional field to indicate the license plate or registration number of the vehicle.</description>
    <inlineHelpText>Enter the license plate or registration number of the vehicle.</inlineHelpText>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>