force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Registration_Type__c</fullName>
    <description>Users populate this optional field to indicate the registration type of the vehicle.</description>
    <inlineHelpText>Select the type of registration that applies to the vehicle.</inlineHelpText>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Livery</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>