force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Seating_Capacity__c</fullName>
    <description>Users populate this optional field to indicate the legal seating capacity of the vehicle.</description>
    <inlineHelpText>Enter the legal seating capacity of the vehicle.</inlineHelpText>
    <label>Seating Capacity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>