force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Total_Runtime__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Runtime__c</fullName>
    <description>Users populate this optional field to indicate the total runtime of the engine for the titled collateral.</description>
    <inlineHelpText>Enter the total runtime of the engine for the titled collateral.</inlineHelpText>
    <label>Total Runtime</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>